--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: . # Build the image using the SIMPLIFIED Dockerfile
     image: realtime-voice-chat:latest # Name the image built by 'build:'
     container_name: realtime-voice-chat-app
+    runtime: nvidia
     ports:
       - "8000:8000"
     environment:
